<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/ur_mom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textAlignment="center"
        android:textSize="18sp" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <TextView
            android:text="@string/accelx"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_row="0"
            android:layout_column="1"
            android:textAlignment="center"
            android:layout_width="128dp" />

        <TextView
            android:text="@string/accely"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textAlignment="center" />

        <TextView
            android:text="@string/accelz"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:textAlignment="center"
            android:layout_width="128dp" />

        <TextView
            android:text="@string/accel_value"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/acc_x"
            android:layout_row="1"
            android:layout_column="1"
            android:textAlignment="center" />
        <TextView
            android:text="@string/accel_value"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/acc_y"
            android:layout_row="1"
            android:layout_column="2"
            android:textAlignment="center" />
        <TextView
            android:text="@string/accel_value"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/acc_z"
            android:layout_row="1"
            android:layout_column="3"
            android:textAlignment="center" />
    </GridLayout>

    <TextView
        android:text="@string/eeg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView32"
        android:textAlignment="center"
        android:textSize="18sp" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/eeg1"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView36"
            android:layout_row="0"
            android:layout_column="1"
            android:textAlignment="center" />
        <TextView
            android:text="@string/eeg2"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView37"
            android:layout_row="0"
            android:layout_column="2"
            android:textAlignment="center" />
        <TextView
            android:text="@string/eeg3"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView38"
            android:layout_row="0"
            android:layout_column="3"
            android:textAlignment="center" />
        <TextView
            android:text="@string/eeg4"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView39"
            android:layout_row="0"
            android:layout_column="4"
            android:textAlignment="center" />
        <TextView
            android:text="@string/EEG_value"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/eeg_af7"
            android:layout_row="1"
            android:layout_column="1"
            android:textAlignment="center" />
        <TextView
            android:text="@string/EEG_value"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/eeg_af8"
            android:layout_row="1"
            android:layout_column="2"
            android:textAlignment="center" />
        <TextView
            android:text="@string/EEG_value"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/eeg_tp9"
            android:layout_row="1"
            android:layout_column="3"
            android:textAlignment="center" />
        <TextView
            android:text="@string/EEG_value"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:id="@+id/eeg_tp10"
            android:layout_row="1"
            android:layout_column="4"
            android:textAlignment="center" />



    </GridLayout>

    <Button
        android:text="@string/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/refresh" />

    <TextView
        android:text="@string/connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/con_status"
        android:textAlignment="center" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/muses_spinner" />
    <Button
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connect" />
    <Button
        android:text="@string/disconnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/disconnect" />

    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next" />

</LinearLayout>
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bkozik.butterfliesandhurricanes.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/accelLabel"
        android:id="@+id/textView6" />

    <Button
        android:text="@string/disconnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:id="@+id/disconnect"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/connect"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/muses_spinner" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_above="@+id/acc_x"
        android:layout_alignEnd="@+id/eeg_af8" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/con_status"
        android:id="@+id/textView13"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/acc_y" />

    <Button
        android:text="@string/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:id="@+id/refresh"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/accel_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acc_x"
        android:layout_alignBaseline="@+id/acc_y"
        android:layout_alignBottom="@+id/acc_y"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/eeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/EEGLabel"
        android:layout_below="@+id/acc_y"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/EEG_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eeg_tp10"
        android:layout_alignBaseline="@+id/eeg_tp9"
        android:layout_alignBottom="@+id/eeg_tp9"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/EEG_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eeg_af8"
        android:layout_alignBaseline="@+id/eeg_af7"
        android:layout_alignBottom="@+id/eeg_af7"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blink"
        android:layout_alignBaseline="@+id/refresh"
        android:layout_alignBottom="@+id/refresh"
        android:layout_alignEnd="@+id/eeg_af8" />

    <TextView
        android:text="@string/EEG_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eeg_af7"
        android:layout_below="@+id/EEGLabel"
        android:layout_toStartOf="@+id/EEGLabel"
        android:layout_marginEnd="12dp" />

    <TextView
        android:text="@string/EEG_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:id="@+id/eeg_tp9"
        android:layout_below="@+id/EEGLabel"
        android:layout_toEndOf="@+id/EEGLabel" />

    <TextView
        android:text="@string/jaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jawClench"
        android:layout_alignBaseline="@+id/refresh"
        android:layout_alignBottom="@+id/refresh"
        android:layout_toEndOf="@+id/eeg_tp9" />

    <Button
        android:text="@string/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/connect"
        android:layout_above="@+id/disconnect"
        android:layout_alignStart="@+id/refresh" />

    <TextView
        android:text="@string/connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/con_status"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/ur_mom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/accelLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/accel_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acc_z"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/accelLabel"
        android:layout_toEndOf="@+id/eeg_tp9" />

    <TextView
        android:text="@string/accel_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acc_y"
        android:layout_alignBaseline="@+id/acc_z"
        android:layout_alignBottom="@+id/acc_z"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/con_status"
        android:layout_alignStart="@+id/connect"
        android:id="@+id/next"
        android:layout_toStartOf="@+id/eeg_tp9"
        android:layout_above="@+id/muses_spinner"
        android:layout_alignEnd="@+id/acc_y"
        android:onClick="goToColors"/>

</RelativeLayout>
-->